# Simage

./: .gitignore  README (2).md  README.md  aiimagepipe.py  exif_dump.ps1  exif_dump.py  export_wildcards.py  normalize_and_ingest.py  parse_resources.py  path_utils.py  pipe_normalize.py  pipe_parse.py  pipe_resolve.py  pyproject.toml  resolve_resource_refs.py  run.cmd  run.ps1  run.sh  schema.sql
SimageUI/: README.md  image_scanner.py  main.py  requirements.txt  thumbnail_grid.py  thumbnailer.py  ui_gallery.py
docs/: DIFF_PROCESS.md  DIFF_TEMPLATE.md  newdiff.txt  newdiffmang.txt
docs/agents/: AGENT_PROMPT.md  AGENT_PROMPT_CODING.md  AGENT_PROMPT_DIFF_WRITER.md  AGENT_PROMPT_MANAGER.md  AGENT_PROMPT_OWNER.md  AGENT_REST_GATE.md  agent.txt
docs/diffs/: DIFF-000.md  DIFF-001.md  DIFF-002.md  DIFF-003.md
scripts/: run.cmd  run.ps1
simage/: __init__.py  cli.py  exif_dump.py  export_wildcards.py  pipe_normalize.py  pipe_parse.py  pipe_resolve.py
simage/core/: exif.py  ingest.py  resolve.py  resources.py  wildcards.py
simage/data/: schema.sql
simage/legacy/: __init__.py
simage/ui/: README.md  app.py  batch.py  change_log.py  csv_edit.py  db_viewer.py  edit.py  gallery.py  record_filter.py  (+6 more)
tests/: conftest.py  test_change_log.py  test_change_logger.py  test_cli.py  test_core.py  test_csv_edit.py  test_exif.py  test_export_wildcards.py  test_ingest.py  test_ingest_backup.py  test_paths.py  test_pipe_normalize.py  test_pipe_normalize_backup.py  test_record_filter.py  test_resolve.py  test_resources.py  test_scanner.py  test_thumbnails.py  test_wildcards.py
(+17 files in other folders)
