[project]
name = "simage"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["simage*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
cache_dir = ".venv/.pytest_cache"
addopts = "-p no:cacheprovider"

